--- a/app/src/main/res/drawable/ic_parking_no_more_space.xml
+++ b/app/src/main/res/drawable/ic_parking_no_more_space.xml
@@ -6,8 +6,8 @@
         <aapt:attr name="android:fillColor">
             <gradient android:endX="138.5488" android:endY="343.80475"
                 android:startX="138.5488" android:startY="1.4957211" android:type="linear">
-                <item android:color="@color/parking_no_more_space" android:offset="0"/>
-                <item android:color="@color/parking_no_more_space" android:offset="0.5"/>
+                <item android:color="#ff0000" android:offset="0"/>
+                <item android:color="#ff0000" android:offset="0.5"/>
                 <item android:color="#FF5393D6" android:offset="1"/>
             </gradient>
         </aapt:attr>
