--- a/app/src/main/res/layout/fragment_vehicle_map.xml
+++ b/app/src/main/res/layout/fragment_vehicle_map.xml
@@ -3,11 +3,9 @@
                                              android:layout_width="match_parent"
                                              android:layout_height="match_parent">
 
-    <fragment android:id="@+id/map"
-              android:name="com.google.android.gms.maps.SupportMapFragment"
-              xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:tools="http://schemas.android.com/tools"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"/>
+    <com.google.android.gms.maps.MapView
+        android:id="@+id/vehicle_map"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
 </android.support.constraint.ConstraintLayout>
