--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,7 @@
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
     <color name="lightGrey">#C9C9C9</color>
+    <color name="darkGrey">#999999</color>
 
     <color name="parking_no_more_space">#ff0000</color>
     <color name="parking_left_space">#33cc33</color>
